# SDL_App-Template

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.C4EB6EFDF631A1C0.idx
src/: main.cpp
